fix: adjust menu item style to reduce spacing between wrapped lines
close #2549

--- a/src/options/style.css
+++ b/src/options/style.css
@@ -74,7 +74,8 @@ html:not(.narrow) {
   }
   .aside-menu-item {
     a {
-      line-height: 2.5;
+      padding: 8px 0;
+      line-height: 1.2;
     }
     &:nth-last-child(2) {
       flex: 1;
